fixed that gap on the right

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,11 +40,13 @@ button {
 }
 
 #row1 {
+   margin-right: 50px;
    padding-top: 70px;
    text-align: center;
 }
 
 .row {
+  
    padding-top: 50px;
 }
 .col-md-7 {
